//// ------------------------------------------------------
//// THIS FIELD IS AUTOGENERATED. DO NOT EDIT.
//// ------------------------------------------------------

Enum user_role {
  Admin
  Organization
  Pending
}

Enum event_status {
  Draft
  Published
}

Enum borrow_status {
  Pending
  Approved
  Rejected
  Active
  Returned
  Cancelled
}

Table Users {
  id uuid [primary key, note: 'References auth.users(id)']
  email varchar
  role user_role
  organization_name varchar
  created_at timestamp
  updated_at timestamp
}

Table Assets {
  id uuid [primary key]
  target_qr_identifier uuid [unique, note: 'Unique string for QR generation']
  name varchar
  category varchar
  description text
  image_url varchar [note: 'Supabase Storage Public URL']
  is_deleted boolean [default: false, note: 'Soft delete flag']
  created_at timestamp
  updated_at timestamp
}

Table Events {
  id uuid [primary key]
  title varchar
  content_description text
  event_date timestamp
  status event_status
  image_url varchar [note: 'Supabase Storage Public URL']
  created_by uuid [ref: > Users.id, note: 'Admin/Officer']
  created_at timestamp
  updated_at timestamp
}

Table Officers {
  id uuid [primary key]
  user_id uuid [ref: - Users.id, note: 'Optional']
  full_name varchar
  email varchar [note: 'Contact email for frontend display']
  position_title varchar [note: 'e.g., President, Secretary']
  department varchar [note: 'e.g., Computer Engineering']
  academic_year varchar [note: 'e.g., 2025-2026']
  image_url varchar [note: 'Supabase Storage Public URL']
  display_order int [note: 'For ordering on frontend']
  is_active boolean [note: 'True if currently serving']
  created_at timestamp
  updated_at timestamp
}

Table BorrowRequests {
  id uuid [primary key]
  user_id uuid [ref: > Users.id, note: 'Organization']
  borrower_contact_name varchar [note: 'Specific person borrowing']
  borrower_email varchar
  borrower_phone varchar
  requested_start_date timestamp
  requested_end_date timestamp
  letter_file_url varchar [note: 'Supabase Storage Secured/Signed URL']
  status borrow_status
  rejection_reason text [note: 'Reason for rejection, null if not rejected']
  reviewed_by uuid [ref: > Users.id, note: 'Admin/Officer']
  reviewed_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table BorrowRequestItems {
  id uuid [primary key]
  borrow_request_id uuid [ref: > BorrowRequests.id]
  asset_id uuid [ref: > Assets.id]
}

Table AuditLogs {
  id uuid [primary key]
  user_id uuid [ref: > Users.id, note: 'Who performed the action']
  action varchar [note: 'e.g., STATUS_CHANGED, REQUEST_APPROVED']
  entity_type varchar [note: 'e.g., Asset, BorrowRequest']
  entity_id uuid
  state_changes json [note: 'Delta of changes made']
  created_at timestamp
}
